website/components/terminal.module.css
/*
 * Credits for the terminal effects:
 * Scanlines/flicker: 	http://aleclownes.com/2017/02/01/crt-display.html
 * Screen turn-off:		https://codepen.io/lbebber/pen/XJRdrV
 * Post-It note:		https://mentormate.com/blog/css-postit-note/
 */
@import url("https://fonts.googleapis.com/css?family=VT323&display=swap");
@import url("https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap");

/*********** VARIABLES *************/

.container {
  --green-color: #5bf870;
  --green-bg: #05321e;
  --red-color: #c0100a;
  --red-bg: #1b0302;
  --blue-color: #a5a5ff;
  --blue-bg: #4242e7;
  --off: #050505;
  --dark: #111;
  --term: "> ";
}

/*********** THEMES  *************/
/** Use --color and --bg in your CSS files to get the active text and bg colour. */
/** One of these theme classes is applied to the <body>, so the whole document uses that theme */
.theme-red {
  --color: var(--red-color);
  --bg: var(--red-bg);
  --term: "$ ";
}
.theme-green {
  --color: var(--green-color);
  --bg: var(--green-bg);
}
.theme-blue {
  --color: var(--blue-color);
  --bg: var(--blue-bg);
  --term: "";
}

/** Theme specific stuff from here */
.theme-red .char {
  animation: type 0.5s linear 0s 1;
}
.theme-red #crt {
  font-family: "Share Tech Mono", monospace;
  font-size: max(1rem, 1.6vmin);
}
.theme-blue #crt {
  background-image: none;
  background-color: var(--color);
  box-shadow: none;
  border-radius: 1em;
  padding: 3rem;
}
.theme-blue #monitor:not(.off) #crt:before {
  background: none;
  background-color: var(--bg);
  top: 3rem;
  left: 3rem;
  bottom: 3rem;
  right: 3rem;
  z-index: 0;
}
.theme-blue .scanline {
  display: none;
}
.theme-blue .terminal {
  padding: 0;
}

/*********** GENERIC STUFF *************/

.container {
  box-sizing: border-box;
  background: #111;
  margin: 0;
  overflow: hidden;
  height: 100%;
}

.container *,
.container *:before,
.container *:after {
  box-sizing: inherit;
}

.container a {
  outline: none;
}
/*********** INPUT / OUTPUT *************/

#prompt {
  display: none;
}
.container [contenteditable] {
  caret-color: transparent; /** This hides the default browser caret */
  outline: none;
}
#input {
  position: relative;
  display: block;
  white-space: pre-wrap;
}
/* Inserts the > before terminal input */
#input:before {
  content: var(--term);
}
/* Puts a blinking square after the content as replacement for caret */
#input[contenteditable="true"]:after,
.typer.active:after {
  content: "■";
  animation: cursor 1s infinite;
  animation-timing-function: step-end;
  margin-left: 1px;
  line-height: 1rem;
}

/* 
  * This makes the caret (:after) show correctly after the previously typed character.
  * Otherwise the caret is always on new line
  */
.container [contenteditable="true"] br:last-child {
  display: none;
}

#input.password .char {
  display: none;
}
#input.password:after {
  color: var(--color);
}
#input.password:before {
  color: var(--color);
  content: var(--term) attr(data-pw);
}

.typer {
  word-break: break-all;
  white-space: pre;
}

/*********** PARTS OF THE SCREEN *************/

#monitor {
  margin: 1vmin auto;
  padding: 0.5vmin;
  width: min-content;
  height: calc(100% - 2 * (1vmin + 0.5vmin));
  display: flex;
  flex-direction: column;
  align-items: center;
  background: #2d2c2a;
  border-radius: 0.5rem;
}

#screen {
  position: relative;
  border: 30px solid transparent;
  overflow: hidden;
  height: 100%;
}
/* The screen itself + border */
#crt,
.container pre {
  font-family: "VT323", monospace;
}
#crt {
  min-width: 80ch; /* This makes 80 monospace characters fit on the screen */
  height: 100%;
  font-size: max(
    1rem,
    2.2vmin
  ); /* Scale the font-size relative to the minimum screen dimension */
  position: relative;
  background: var(--bg);
  background-image: radial-gradient(ellipse, var(--bg) 0%, var(--off) 90%);
  animation: on 2s linear;
  transition: all 0.5s;
  overflow: hidden;
}

#crt:after {
  content: " ";
  opacity: 0;
  background: #fff;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  z-index: 3;
}
#monitor.turn-off #crt:after {
  animation: turnOff 0.4s ease-in-out;
  /* animation-fill-mode: forwards; */
}

#monitor:not(.off) #crt:before {
  content: " ";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: linear-gradient(
    to bottom,
    rgba(18, 16, 16, 0.1) 50%,
    rgba(0, 0, 0, 0.25) 50%
  );
  background-size: 100% 8px;
  z-index: 2;
  pointer-events: none;
  animation: fadeIn 2s;
}

/* Screen turned off */
#monitor.off #crt {
  background: var(--off);
}
#monitor.off #crt:before {
  background: none;
}
#monitor.off #crt * {
  display: none !important;
}

body.fullscreen #crt {
  font-size: 2.5rem;
  position: fixed;
  width: 100%;
  left: 0;
  top: 0;
  z-index: 999;
}

.fullscreen {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.terminal {
  position: relative;
  height: 100%;
  padding: 2rem;
  overflow-y: auto;
  overflow-x: hidden;
  word-break: break-word;
  text-transform: uppercase;
  animation: textShadow 4s infinite;
}

.terminal,
.fullscreen {
  color: var(--color);
  text-shadow: 0 0 5px #c8c8c8;
}

.container ::selection {
  background: var(--color);
  color: var(--bg);
  text-shadow: none;
}

/* Scanline moving top to bottom over the screen */
.scanline {
  width: 100%;
  height: 100px;
  z-index: 8;
  background: linear-gradient(
    0deg,
    rgba(0, 0, 0, 0) 0%,
    rgba(255, 255, 255, 0.2) 10%,
    rgba(0, 0, 0, 0.1) 100%
  );
  opacity: 0.1;
  position: absolute;
  bottom: 100%;
  pointer-events: none;
  animation: scanline 10s linear infinite;
}

/*********** CONTROLS *************/
.container button {
  cursor: pointer;
  outline: none;
  color: var(--dark);
}
/* ... */

